--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div id="pageparent1">
             <div id="page1">
                 <h1>Welcome To Our <br><span style="color: green;">Clone!</span></h1>
-                <p>Lorem ipsum dolor sit amet,adipiscing elit. sed vel felis that lectus laoreet. maecenas tincidunt velit lectus the consectetur, fringilla an erate laoreet. turpis phar Integer sed velit vel erat for the bibendum gravida sed neque.maecenas tincidunt velit lectus the consectetur, fringilla an erate laoreet. turpis phar Integer sed velit vel erat for the bibendum gravida sed neque. </p>
+                <p>Lorem ipsum dolor sit amet,adipiscing elit. sed vel felis that lectus laoreet. maecenas tincidunt velit lectus the bibendum consectetur, fringilla an erate laoreet. turpis phar Integer sed velit vel erat for the bibendum gravida sed neque.maecenas tincidunt velit lectus the consectetur, fringilla an erate laoreet. turpis phar Integer sed velit vel erat for the bibendum gravida sed neque. </p>
                 <button id="btn1">Read more</button>
             </div>
             <div id="page2">
